sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:5: error: not found: value j
  if (plusPetit(i,j)==true){
                  ^AlgBubbleSort1:6: error: Int does not take parameters
    echange(i,i+1)
           ^