sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var echange = 0
  var i = 0
  if (plusPetit(i,j)==true){
    echange(i,i+1)
    i = i + 1
  }
  else {
    i = i + 1
  }
}